--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -32,8 +32,14 @@ http {
         listen 80;
         server_name _;
         
-        # Redirect all traffic to port 8000
-        return 301 http://$host:8000$request_uri;
+        # Proxy all traffic to port 8000
+        location / {
+            proxy_pass http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 
     server {
