fix(docker): standardize php-fpm log path and create required directories
Update error log path in php-fpm config files to use consistent /var/log/php-fpm/www.log location. Add directory creation and permission setup in Dockerfiles to ensure the log directory exists with correct permissions.

--- a/docker/php-fpm.dev.conf
+++ b/docker/php-fpm.dev.conf
@@ -34,7 +34,7 @@ env[TEMP] = /tmp
 ; PHP settings for development
 php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 php_flag[display_errors] = on
-php_admin_value[error_log] = /var/log/fpm-php.www.log
+php_admin_value[error_log] = /var/log/php-fpm/www.log
 php_admin_flag[log_errors] = on
 php_admin_value[memory_limit] = 512M
 php_admin_value[upload_max_filesize] = 100M
