fix(docker): correct ownership of PHP-FPM config files
Ensure PHP-FPM configuration files are owned by www-data user to prevent permission issues during container runtime. Applied to both production and development Dockerfiles.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -66,6 +66,9 @@ COPY docker/supervisord.dev.conf /etc/supervisor/conf.d/supervisord.conf
 COPY docker/php-fpm.dev.conf /usr/local/etc/php-fpm.d/www.conf
 COPY docker/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
+# Fix ownership of PHP-FPM configuration
+RUN chown www-data:www-data /usr/local/etc/php-fpm.d/www.conf
+
 # Create directories
 RUN mkdir -p /var/log/supervisor
 
